@@ -1,6 +1,7 @@
 ==================================================================================================
 Changes for 2.10
 ==================================================================================================
+- Added RCG version number to GDSTP screens.
 - Added multi-page listing capabilities for unconnected EDCU channels. Presently, still a work
   in progress.
 - Added a new install script, nort- (No real-time). This was added to properly generate
